Fix the quote section alignment

--- a/template.css
+++ b/template.css
@@ -198,18 +198,15 @@ button {
     align-items: center;
 }
 
-.quote-container {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
-
 .quote-text {
-    padding-top: 48px;
-    padding-left: 48px;
+    padding-top: 32px;
+    padding-left: 36px;
+    padding-bottom: 16px;
+    padding-right: 24px;
 }
 
 .quote-author {
+    text-align: right;
     padding-right: 48px;
 }
 
